Inicialização da apresentação dos desenvolvedores

--- a/about.html
+++ b/about.html
@@ -215,10 +215,10 @@
                     <!-- about-img -->
                     <div class="about-img ">
                         <div class="about-font-img d-none d-lg-block">
-                            <img src="assets/img/gallery/about2.jpg" alt="" style="max-width: 500px; width: 85%; height: auto;">
+                            <img src="assets/img/gallery/about2.jpg" alt="Planeta submergindo na água" style="max-width: 500px; width: 85%; height: auto;">
                         </div>
                         <div class="about-back-img ">
-                            <img src="assets/img/gallery/about1.jpg" alt="" style="max-width: 500px; width: 100%; height: auto;">
+                            <img src="assets/img/gallery/about1.jpg" alt="Imagem de gota de água" style="max-width: 500px; width: 100%; height: auto;">
                         </div>
                     </div>
                 </div>
@@ -258,8 +258,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Emanuel</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -274,8 +274,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Gabriel Antunes</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -290,8 +290,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Júlia Emily</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -306,8 +306,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Miguel Braga</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -322,8 +322,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Raira Alves</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -338,8 +338,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Sofia Dutra</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
@@ -354,8 +354,8 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial.png" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
+                                        <span>Suzane Maria</span>
+                                        <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
