--- a/blog.html
+++ b/blog.html
@@ -158,7 +158,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a sua Utilidade</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a seu Uso no Cotiidiano </h2>
                                     </a>
                                     <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
@@ -204,7 +204,7 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;"> Gestão das Águas e esgoto </h2>
                                     </a>
-                                    <p> A **CAGECE** (Companhia de Água e Esgoto do Ceará) é a empresa responsável pela **gestão dos serviços de abastecimento de água e tratamento de esgoto no estado do Ceará. 
+                                    <p> A CAGECE (Companhia de Água e Esgoto do Ceará) é a empresa responsável pela gestão dos serviços de abastecimento de água e tratamento de esgoto no estado do Ceará. 
                                         Ela atua captando, tratando e distribuindo água potável, além de coletar e tratar o esgoto para garantir a 
                                         saúde pública e a preservação do meio ambiente. A empresa também desenvolve projetos de educação ambiental, combate ao desperdício e 
                                         ampliação do acesso ao saneamento básico em áreas urbanas e rurais. Seu objetivo é oferecer serviços de qualidade com sustentabilidade e eficiência.</p>
