--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left d-flex">
                                     <ul>     
-                                        <li>Telefone: +99 (0) 101 0000 888</li>
-                                        <li>Email: noreply@yourdomain.com</li>
+                                        <li>Telefone: (88) 3303-1200</li>
+                                        <li>Email: recepcao.aracati@ifce.edu.br</li>
                                     </ul>
                                     <div class="header-social">    
                                         <ul>
@@ -132,7 +132,7 @@
                                     <a href="industries.html" class="btn hero-btn mb-10">Doe</a>
                                     <a href="industries.html" class="cal-btn ml-15">
                                         <i class="flaticon-null"></i>
-                                        <p>+12 1325 41</p>
+                                        <p>(88) 3303-1200</p>
                                     </a>
                                 </div>
                             </div>
@@ -182,10 +182,10 @@
                                     <h4>Informações de contato</h4>
                                     <ul>
                                         <li>
-                                            <p>Endereço: Praça dos Três Poderes - Brasília, DF, 70150-900.</p>
+                                            <p>Endereço: Instituto Federal do Ceará, Rodovia CE-040, Km 137,1, s/n - Aeroporto, Aracati - CE</p>
                                         </li>
-                                        <li><a href="#">Telefone: +8880 44338899</a></li>
-                                        <li><a href="#">Email: info@colorlib.com</a></li>
+                                        <li><a href="#">Telefone: (88) 3303-1200<a></li>
+                                        <li><a href="#">Email: recepcao.aracati@ifce.edu.br</a></li>
                                     </ul>
                                 </div>
                             </div>
