--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Preservação da Água Potável</title>
-    <meta name="Como a água pode ser preservada" content="">
+    <meta name="Como a água pode ser preservada no nosso Meio-ambiente" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
@@ -182,10 +182,9 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;"> Crise Global da Água </h2>
                                     </a>
-                                    <p> A crise global da água é a escassez e má distribuição da água potável no mundo, 
-                                        agravada pela poluição, desperdício e mudanças climáticas. Milhões de pessoas vivem sem acesso à água limpa, 
-                                        o que causa doenças e impacta a produção de alimentos. O crescimento populacional e a má gestão intensificam o problema. 
-                                        Soluções incluem uso consciente, tratamento da água, preservação ambiental e investimento em infraestrutura.</p>
+                                    <p> A crise global da água é a escassez e má distribuição da água potável no mundo, agravada pela poluição, desperdício e mudanças climáticas. 
+                                        Milhões de pessoas vivem sem acesso à água limpa, o que causa doenças e impacta a produção de alimentos. O crescimento populacional e 
+                                        a má gestão intensificam o problema. Soluções incluem uso consciente, tratamento da água, preservação ambiental e investimento em infraestrutura.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -202,7 +201,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;"> Gestão das Águas e esgoto </h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;"> Gestão das Águas e esgoto (CAGECE) </h2>
                                     </a>
                                     <p> A CAGECE (Companhia de Água e Esgoto do Ceará) é a empresa responsável pela gestão dos serviços de abastecimento de água e tratamento de esgoto no estado do Ceará. 
                                         Ela atua captando, tratando e distribuindo água potável, além de coletar e tratar o esgoto para garantir a 
@@ -226,8 +225,10 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;">Água e suas fontes de Poluição</h2>
                                     </a>
-                                    <p>As fontes de poluição da água incluem esgotos domésticos e industriais sem tratamento, atividades agrícolas que utilizam agrotóxicos e fertilizantes, 
-                                        o descarte inadequado de lixo e resíduos sólidos, acidentes e derramamento de petróleo, e mineração com seus rejeitos tóxicos, trazendo um grande risco de doenças. </p>
+                                    <p> As principais fontes de poluição da água incluem o esgoto doméstico, resíduos industriais, 
+                                        agrotóxicos, lixo urbano, derramamento de óleo e o desmatamento, que contribui para a erosão e o assoreamento dos rios. 
+                                        Essas poluições contaminam rios, lagos e aquíferos, trazendo consequências graves, como o surgimento de doenças, morte da vida aquática, escassez de água potável, 
+                                        desequilíbrio dos ecossistemas e impactos na agricultura e economia. A poluição da água ameaça tanto o meio ambiente quanto a saúde humana. </p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
