--- a/blog.html
+++ b/blog.html
@@ -158,7 +158,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a seu Uso no Cotiidiano </h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a seu Uso no Cotidiano </h2>
                                     </a>
                                     <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
