--- a/blog.html
+++ b/blog.html
@@ -371,19 +371,19 @@
                                 <h4 class="widget_title" style="color: #2d2d2d;">Tópicos</h4>
                                 <ul class="list">
                                     <li>
-                                        <a href="#">Uso no cotidiano</a>
+                                        <a href="#">Não polua</a>
                                     </li>
                                     <li>
-                                        <a href="#">Crise global</a>
+                                        <a href="#">Descarga consciente</a>
                                     </li>
                                     <li>
-                                        <a href="#">Gestão da água</a>
+                                        <a href="#">Conserte vazamentos </a>
                                     </li>
                                     <li>
-                                        <a href="#">Fontes de poluição</a>
+                                        <a href="#">Limpeza</a>
                                     </li>
                                     <li>
-                                        <a href="#">Dicas para preservar</a>
+                                        <a href="#">Economizar na hora do banho</a>
                                     </li>
                         
     
