Adição de imagens

--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial4.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Emanuel</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -289,7 +289,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial3.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Júlia Emily</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -305,7 +305,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial2.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;" >
                                         <span>Miguel Braga</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -337,7 +337,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial1.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Sofia Dutra</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
