--- a/about.html
+++ b/about.html
@@ -470,9 +470,9 @@
                                 <div class="footer-tittle">
                                     <h4>Links Importantes</h4>
                                     <ul>
-                                        <li><a href="#"> Visualize o projeto</a></li>
-                                        <li><a href="#">Contate-nos</a></li>
-                                        <li><a href="#">Desenvolvedores</a></li>
+                                        <li><a href="blog.html"> Visualize o projeto</a></li>
+                                        <li><a href="contact.html">Contate-nos</a></li>
+                                        <li><a href="">Desenvolvedores</a></li>
                                         <li><a href="#">Propriedades</a></li>
                                         <li><a href="#">Suporte Técnico</a></li>
                                     </ul>
