--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
                                         </form>
                                     </div>
                                     <ul class="contact-now">     
-                                        <li><a href="#">Se inscreva hoje</a></li>
+                                        <li><a href="contact.html">Se inscreva hoje</a></li>
                                     </ul>
                                 </div>
                             </div>
