--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                                         </form>
                                     </div>
                                     <ul class="contact-now">     
-                                        <li><a href="#">Se inscreva hoje</a></li>
+                                        <li><a href="contact.html">Se inscreva hoje</a></li>
                                     </ul>
                                 </div>
                             </div>
