--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                                         </form>
                                     </div>
                                     <ul class="contact-now">     
-                                        <li><a href="#"> Faça parte do nosso projeto! </a></li>
+                                        <li><a href="index.html"> Faça parte do nosso projeto! </a></li>
                                     </ul>
                                 </div>
                             </div>
