--- a/events.html
+++ b/events.html
@@ -155,25 +155,25 @@
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">6,200</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                    <span class="counter color-green">25</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green">da população mundial não tem acesso a água potável</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">80</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green">Fund Raised</p>
+                                    <span class="counter color-green">15</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green">dos brasileiros sem água acessível</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">256</span>
+                                    <span class="counter color-green">100</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                  <p class="color-green">mais de 100 ONGs fazem manifesto me defesa das águas</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
