--- a/program.html
+++ b/program.html
@@ -48,8 +48,8 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left d-flex">
                                     <ul>     
-                                        <li>Phone: +99 (0) 101 0000 888</li>
-                                        <li>Email: noreply@yourdomain.com</li>
+                                        <li>Telefone: (88) 3303-1200</li>
+                                        <li>Email: recepcao.aracati@ifce.edu.br</li>
                                     </ul>
                                     <div class="header-social">    
                                         <ul>
