--- a/events.html
+++ b/events.html
@@ -172,15 +172,15 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">100</span>
                                     <span class="plus">+</span>
-                                  <p class="color-green">mais de 100 ONGs fazem manifesto me defesa das águas</p>
+                                  <p class="color-green">mais de 100 ONGs fazem manifesto em defesa das águas</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">256</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                    <span class="counter color-green">47</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green">sem rede de esgoto alcançável</p>
                                 </div>
                             </div>
                         </div>
