--- a/events.html
+++ b/events.html
@@ -360,9 +360,9 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Dúvidas.</h4>
+                                    <h4>Doação</h4>
                                     <div class="footer-pera footer-pera2">
-                                    <p>Envie suas dúvidas.</p>
+                                    <p>Quer ajudar e não sabe como começar? Envie suas dúvidas aqui!</p>
                                 </div>
                                 <!-- Form -->
                                 <div class="footer-form" >
