--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                                     </div>
                                     <!-- Header-btn -->
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="btn header-btn" style="background-color:#1ed2ff;">Doe para a nossa causa</a>
+                                        <a href="contact.html" class="btn header-btn">Doe para a nossa causa</a>
                                     </div>
                                 </div>
                             </div> 
