--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         </nav>
                                     </div>
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="btn header-btn">Doe para a nossa causa</a>
+                                        <a href="contact.html" style="background-color: #09cc7f" class="btn header-btn">Doe para a nossa causa</a>
                                     </div>
                                 </div>
                             </div> 
