--- a/events.html
+++ b/events.html
@@ -145,7 +145,7 @@
     </div>
     <!-- Hero End -->
     <!--? Count Down Start -->
-    <div class="count-down-area pt-25 section-bg" data-background="assets/img/gallery/section_bg02.png">
+    <div class="count-down-area pt-25 section-bg" data-background="assets/img/gallery/section_bg02.jpg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-md-12">
