--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         </nav>
                                     </div>
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" style="background-color: #09cc7f" class="btn header-btn">Doe para a nossa causa</a>
+                                        <a href="contact.html" class="btn header-btn">Doe para a nossa causa</a>
                                     </div>
                                 </div>
                             </div> 
@@ -128,7 +128,7 @@
                                 <h1 style="color: white">Nossa ajuda para com<br> o mundo.</h1>
                                 <p style="color: white">A purificação das águas é a purificação do mundo.</p>
                                 <div class="hero__btn">
-                                    <a href="industries.html" class="btn hero-btn mb-10">Doe</a>
+                                    <a href="industries.html" style="color: #09cc7f" class="btn hero-btn mb-10">Doe</a>
                                     <a href="industries.html" class="cal-btn ml-15">
                                         <i class="flaticon-null"></i>
                                         <p>(88) 3303-1200</p>
