--- a/events.html
+++ b/events.html
@@ -156,7 +156,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">25</span>
                                     <span class="plus">%</span>
-                                    <p class="color-green">da população mundial não tem acesso a água potável</p>
+                                    <p class="color-green" style="color: #212529">da população mundial não tem acesso a água potável</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -164,7 +164,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">15</span>
                                     <span class="plus">%</span>
-                                    <p class="color-green">dos brasileiros sem água acessível</p>
+                                    <p class="color-green" style="color: #212529">dos brasileiros sem água acessível</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -172,7 +172,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">100</span>
                                     <span class="plus">+</span>
-                                  <p class="color-green">mais de 100 ONGs fazem manifesto em defesa das águas</p>
+                                  <p class="color-green" style="color: #212529">mais de 100 ONGs fazem manifesto em defesa das águas</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -180,7 +180,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">47</span>
                                     <span class="plus">%</span>
-                                    <p class="color-green">sem rede de esgoto alcançável</p>
+                                    <p class="color-green" style="color: #212529">sem rede de esgoto alcançável</p>
                                 </div>
                             </div>
                         </div>
