--- a/about.html
+++ b/about.html
@@ -397,7 +397,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">6,200</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                    <p class="color-green" style="color: #212529">Donation</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -405,7 +405,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">80</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green">Fund Raised</p>
+                                    <p class="color-green" style="color: #212529">Fund Raised</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -413,7 +413,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">256</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                    <p class="color-green" style="color: #212529">Donation</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -421,7 +421,7 @@
                                 <div class="single-counter text-center">
                                     <span class="counter color-green">256</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green">Donation</p>
+                                    <p class="color-green" style="color: #212529">Donation</p>
                                 </div>
                             </div>
                         </div>
