Atualizações no about.html

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                                 <div class="footer-tittle">
                                     <h4>Links importantes</h4>
                                     <ul>
-                                        <li><a href="#">Ver projeto</a></li>
-                                        <li><a href="#">Contate-nos</a></li>
-                                        <li><a href="#">Depoimentos</a></li>
+                                        <li><a href="blog.html">Ver projeto</a></li>
+                                        <li><a href="contact.html">Contate-nos</a></li>
+                                        <li><a href="about.html">Desenvolvedores</a></li>
                                         <li><a href="#">Propriedades</a></li>
                                         <li><a href="#">Suporte</a></li>
                                     </ul>
