--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial4.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
+                                        <img src="assets/img/gallery/testimonial4.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Emanuel</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -272,7 +272,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial.png" alt="Foto do desenvolvedor">
                                         <span>Gabriel Antunes</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -288,7 +288,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial3.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
+                                        <img src="assets/img/gallery/testimonial3.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Júlia Emily</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -304,7 +304,7 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial2.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;" >
+                                        <img src="assets/img/gallery/testimonial2.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;" >
                                         <span>Miguel Braga</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
@@ -320,13 +320,13 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial5.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;" >
                                         <span>Raira Alves</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável pelo desenvolvimento da página "Sobre nós".</p>
                                 </div>
                             </div>
                         </div>
@@ -336,13 +336,13 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial1.jpg" alt="" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
+                                        <img src="assets/img/gallery/testimonial1.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Sofia Dutra</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável pelo desenvolvimento da página "Contate-nos".</p>
                                 </div>
                             </div>
                         </div>
@@ -352,25 +352,9 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="">
+                                        <img src="assets/img/gallery/testimonial.png" alt="Foto do desenvolvedor">
                                         <span>Suzane Maria</span>
                                         <p>Integrante da Equipe</p>
-                                    </div>
-                                </div>
-                                <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Single Testimonial -->
-                        <div class="single-testimonial text-center">
-                            <div class="testimonial-caption ">
-                                <!-- founder -->
-                                <div class="testimonial-founder">
-                                    <div class="founder-img mb-40">
-                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoYfcKRTslOQ7-sdkSQZSKpyj2chUIYVq2XQ&s" alt="">
-                                        <span>Margaret Lawson</span>
-                                        <p>Creative Director</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
