--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                 <div class="col-xl-6 col-lg-7 col-md-10 col-sm-10">
                     <!-- Section Tittle -->
                     <div class="section-tittle text-center mb-80">
-                        <span>O que estamos fazendo?</span>
+                        <span style="color: #022F56;">O que estamos fazendo?</span>
                         <h2>Um blog com o objetivo de conscientizar a sociedade sobre a água e os problemas hídricos do nosso planeta.</h2>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                             <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará. este blog tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
                         </div>
                         <p> A água é um recurso natural, vital e fundamental, composta por H2O, essencial para a vida, sendo incolor insípida e inodora.</p>
-                        <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidadee e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
+                        <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidade e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
                     </div>
                     <a href="about.html" class="btn" style="background-color:#1ed2ff;">Sobre nós</a>
                 </div>
@@ -214,7 +214,7 @@
                     <!-- about-img -->
                     <div class="about-img ">
                         <div class="about-font-img d-none d-lg-block">
-                            <img src="assets/img/gallery/about2.jpg" alt="Planeta submergindo na água" style="max-width: 500px; width: 85%; height: auto;">
+                            <img src="assets/img/gallery/about2.jpg" alt="Planeta submergindo na água" style="max-width: 500px; width: 100%; height: auto;">
                         </div>
                         <div class="about-back-img ">
                             <img src="assets/img/gallery/about1.jpg" alt="Imagem de gota de água" style="max-width: 500px; width: 100%; height: auto;">
@@ -379,33 +379,33 @@
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">6,200</span>
+                                    <span class="counter color-green">33,000,000</span>
                                     <span class="plus">+</span>
-                                    <p class="color-green" style="color: #212529">Donation</p>
+                                    <p class="color-green" style="color: #212529">De brasileiros não tem acesso à água potável</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">80</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green" style="color: #212529">Fund Raised</p>
+                                    <span class="counter color-green">97.5</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green" style="color: #212529">Da água do mundo é salgada</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">256</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green" style="color: #212529">Donation</p>
+                                    <span class="counter color-green">2.5</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green" style="color: #212529">Da água do mundo é doce</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <!-- Counter Up -->
                                 <div class="single-counter text-center">
-                                    <span class="counter color-green">256</span>
-                                    <span class="plus">+</span>
-                                    <p class="color-green" style="color: #212529">Donation</p>
+                                    <span class="counter color-green">69</span>
+                                    <span class="plus">%</span>
+                                    <p class="color-green" style="color: #212529">Da água doce é de difícil acesso, pois está concentrada nas geleiras</p>
                                 </div>
                             </div>
                         </div>
