adição de mais informações no about.html. Links, fotos e textos mudados.

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                                     </div>
                                     <!-- Header-btn -->
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="btn header-btn">Doe para a nossa causa</a>
+                                        <a href="events.html" class="btn header-btn">Doe para a nossa causa</a>
                                     </div>
                                 </div>
                             </div> 
@@ -160,7 +160,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div class="cat-icon">
-                            <span class="flaticon-null-1"></span>
+                         <img src="assets/img/gallery/icon.jpg" alt="Ícone representando a água potável" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Água potável</a></h5>
@@ -171,7 +171,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat active text-center mb-50">
                         <div class="cat-icon">
-                            <span class="flaticon-think"></span>
+                            <img src="assets/img/gallery/icon2.jpg" alt="Ícone representando poluição hídrica" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">A poluição hídrica</a></h5>
@@ -182,7 +182,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div class="cat-icon">
-                            <span class="flaticon-gear"></span>
+                            <img src="assets/img/gallery/icon3.jpg" alt="Ícone representando poluição" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">A sede ainda existe</a></h5>
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-3 col-md-4">
-                        <a href="#" class="btn white-btn f-right sm-left" style="background-color:#1ed2ff;">Torne-se um voluntário</a>
+                        <a href="https://maisagua.social/voluntariado/" class="btn white-btn f-right sm-left" style="background-color:#1ed2ff;">Torne-se um voluntário</a>
                     </div>
                 </div>
             </div>
@@ -257,12 +257,12 @@
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
                                         <img src="assets/img/gallery/testimonial4.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
-                                        <span>Emanuel</span>
+                                        <span>Emanuel Rocha</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável pela construção da página principal do site, além de implementar melhorias no HTML e CSS. Também auxiliou no desenvolvimento de outros elementos e páginas paralelas</p>
                                 </div>
                             </div>
                         </div>
@@ -272,13 +272,13 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="Foto do desenvolvedor">
+                                        <img src="assets/img/gallery/testimonial7.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
                                         <span>Gabriel Antunes</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável, majoritariamente, pelo desenvolvimento da página "Blog".</p>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável pelo desenvolvimento da página "Eventos sociais". Incluiu links de ONGs e projetos sociais como forma de mostrar apoio à causa.</p>
                                 </div>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>Responsável pelo desenvolvimento da página "Sobre nós".</p>
+                                    <p>Responsável, majoritariamente, pelo desenvolvimento da página "Sobre nós". Além disso, também contribuiu para a construção de outros elementos do Blog.</p>
                                 </div>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>Responsável pelo desenvolvimento da página "Contate-nos".</p>
+                                    <p>Responsável pelo desenvolvimento da página "Contate-nos", pela implementação de um mapa da cidade e por disponibilizar informações para contato.</p>
                                 </div>
                             </div>
                         </div>
@@ -352,13 +352,13 @@
                                 <!-- founder -->
                                 <div class="testimonial-founder">
                                     <div class="founder-img mb-40">
-                                        <img src="assets/img/gallery/testimonial.png" alt="Foto do desenvolvedor">
-                                        <span>Suzane Maria</span>
+                                        <img src="assets/img/gallery/testimonial.6.jpg" alt="Foto do desenvolvedor" style="max-width: 150px; width: 80%; height: 150px; border-radius: 50%;">
+                                        <span>Suzane Mendes</span>
                                         <p>Integrante da Equipe</p>
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável, majoritariamente, pelo desenvolvimento da página "Blog".</p>
                                 </div>
                             </div>
                         </div>
